// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MerchantIntegrationOffline cancel payment should work in happy path 1`] = `
Array [
  Array [
    Object {
      "data": "{\\"transactionDetails\\":{\\"paymentChannel\\":\\"CPQR\\",\\"originPartnerTxID\\":\\"ROe9fTsr8WYuyZHsuy738QXNtfyNyj9k\\",\\"currency\\":\\"VND\\",\\"storeGrabID\\":\\"merchant-id\\"}}",
      "headers": Object {
        "Authorization": "partner-id:obvji4Uq1bwZYXr7D9+26t6JsoxLRw6+1S1yz92DhRg=",
        "Content-Type": "application/json",
        "Date": "Thu, 01 Jan 1970 00:00:00 GMT",
        "X-Sdk-Country": "VN",
        "X-Sdk-Language": "nodejs",
        "X-Sdk-Signature": "6EB66646DBF103DC114E34AE6E01C261A217A820357C3B08F3D4E7D4475853C7",
        "X-Sdk-Version": "2.0.0",
      },
      "method": "PUT",
      "url": "/mocapay/partner/v3/payment/cancellation",
    },
  ],
]
`;

exports[`MerchantIntegrationOffline initiate payment should work in happy path 1`] = `
Array [
  Array [
    Object {
      "data": "{\\"transactionDetails\\":{\\"paymentChannel\\":\\"CPQR\\",\\"partnerTxID\\":\\"ROe9fTsr8WYuyZHsuy738QXNtfyNyj9k\\",\\"billRefNumber\\":\\"123\\",\\"amount\\":10000,\\"currency\\":\\"VND\\",\\"paymentExpiryTime\\":0,\\"storeGrabID\\":\\"merchant-id\\"},\\"POSDetails\\":{\\"terminalID\\":\\"terminal-id\\"}}",
      "headers": Object {
        "Authorization": "partner-id:OKdDWxIMh5qK6rdVMQA79J/TRHOjkKr1YVT3UlDl24E=",
        "Content-Type": "application/json",
        "Date": "Thu, 01 Jan 1970 00:00:00 GMT",
        "X-Sdk-Country": "VN",
        "X-Sdk-Language": "nodejs",
        "X-Sdk-Signature": "6EB66646DBF103DC114E34AE6E01C261A217A820357C3B08F3D4E7D4475853C7",
        "X-Sdk-Version": "2.0.0",
      },
      "method": "POST",
      "url": "/mocapay/partner/v3/payment/init",
    },
  ],
]
`;

exports[`MerchantIntegrationOffline inquire payment should work in happy path 1`] = `
Array [
  Array [
    Object {
      "headers": Object {
        "Authorization": "partner-id:oktH4LFWHG1gpkr0JjufpQ2HBtoS0VgWXhz/7DdWVaA=",
        "Content-Type": "application/json",
        "Date": "Thu, 01 Jan 1970 00:00:00 GMT",
        "X-Sdk-Country": "VN",
        "X-Sdk-Language": "nodejs",
        "X-Sdk-Signature": "6EB66646DBF103DC114E34AE6E01C261A217A820357C3B08F3D4E7D4475853C7",
        "X-Sdk-Version": "2.0.0",
      },
      "method": "GET",
      "params": Object {
        "transactionDetails.currency": "VND",
        "transactionDetails.paymentChannel": "CPQR",
        "transactionDetails.storeGrabID": "merchant-id",
        "transactionDetails.txID": "123",
        "transactionDetails.txRefType": "GRABTXID",
        "transactionDetails.txType": "PAYMENT",
      },
      "url": "/mocapay/partner/v3/payment/inquiry",
    },
  ],
]
`;

exports[`MerchantIntegrationOffline refund payment should work in happy path 1`] = `
Array [
  Array [
    Object {
      "data": "{\\"transactionDetails\\":{\\"paymentChannel\\":\\"CPQR\\",\\"originPartnerTxID\\":\\"ROe9fTsr8WYuyZHsuy738QXNtfyNyj9k\\",\\"partnerTxID\\":\\"ROe9fTsr8WYuyZHsuy738QXNtfyNyj9k\\",\\"currency\\":\\"VND\\",\\"amount\\":1000,\\"reason\\":\\"goods refund\\",\\"storeGrabID\\":\\"merchant-id\\"}}",
      "headers": Object {
        "Authorization": "partner-id:bpRO4TQ2P4ZccP5D4Mp4FJ+CIBv6n1VC2E7OLFnjTLE=",
        "Content-Type": "application/json",
        "Date": "Thu, 01 Jan 1970 00:00:00 GMT",
        "X-Sdk-Country": "VN",
        "X-Sdk-Language": "nodejs",
        "X-Sdk-Signature": "6EB66646DBF103DC114E34AE6E01C261A217A820357C3B08F3D4E7D4475853C7",
        "X-Sdk-Version": "2.0.0",
      },
      "method": "PUT",
      "url": "/mocapay/partner/v3/payment/refund",
    },
  ],
]
`;
